--- a/Ej06_MessageConversors/src/main/resources/application.yml
+++ b/Ej06_MessageConversors/src/main/resources/application.yml
@@ -18,9 +18,9 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect   
     
-spring.cloud.function.http.GET: getClientes; getCliente
-spring.cloud.function.http.POST: altaCliente
-spring.cloud.function.http.PUT: modificarCliente
-spring.cloud.function.http.DELETE: bajaCliente
+  cloud:
+    function:
+      http:
+        POST: altaCliente
     
     
